--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="12dp"
-            android:text=" Enter text1"
+            android:text="To"
             android:textSize="16sp"
             android:textStyle="bold" />
         <EditText
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/textbox"
             android:padding="12dp"
-            android:text="Enter text2"
+            android:text="Payee Name"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/editText2"
             android:padding="12dp"
-            android:text="Enter text3"
+            android:text="From"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/editText3"
             android:padding="12dp"
-            android:text="Enter text4"
+            android:text="Transaction Type"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -83,11 +83,128 @@
             android:layout_alignBaseline="@+id/textView4"
             android:layout_alignParentRight="true"
             />
-
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/editText4"
+            android:padding="12dp"
+            android:textStyle="bold"
+            android:text="Amount"
+            android:textSize="16sp"
+            />
+        <EditText
+            android:id="@+id/editText5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignBaseline="@+id/textView5"
+            android:padding="12dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/editText5"
+            android:padding="12dp"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:text="Transaction Status"
+            android:id="@+id/textView6"
+            />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView6"
+            android:layout_alignParentRight="true"
+            android:padding="12dp"
+            android:id="@+id/editText6"
+            />
+        <TextView
+            android:id="@+id/textview7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/editText6"
+            android:padding="12dp"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:text="Transaction Id"
+            />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textview7"
+            android:layout_alignParentRight="true"
+            android:padding="12dp"
+            android:id="@+id/editText7"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/editText7"
+            android:text="Response Time"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:padding="12dp"
+            android:id="@+id/textview8"
+            />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textview8"
+            android:layout_alignParentRight="true"
+            android:padding="12dp"
+            android:id="@+id/editText8"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/editText8"
+            android:padding="12dp"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:text="Customer Ref.No"
+            android:id="@+id/textview9"
+            />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText9"
+            android:layout_alignBaseline="@+id/textview9"
+            android:layout_alignParentRight="true"
+            android:padding="12dp"/>
 
     </RelativeLayout>
+    <LinearLayout
+        android:weightSum="3"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <RelativeLayout
+        <Button
+            android:onClick="saveClicked"
+            android:id="@+id/save"
+            android:text="save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            />
+        <Button
+            android:text="copy"
+            android:id="@+id/copy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            />
+        <Button
+            android:text="send"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            />
+
+    </LinearLayout>
+
+   <!-- <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -104,7 +221,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Read" />
-    </RelativeLayout>
+    </RelativeLayout>-->
 
     <TextView
         android:layout_width="match_parent"
