--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -6,103 +6,147 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
         <TextView
             android:id="@+id/textview1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:padding="12dp"
-            android:text="To"
+            android:text="To                "
             android:textSize="16sp"
             android:textStyle="bold" />
         <EditText
             android:id="@+id/textbox"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textview1"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:gravity="top"
             android:padding="12dp" />
+            </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
         <TextView
             android:id="@+id/textview2"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textbox"
             android:padding="12dp"
-            android:text="Payee Name"
+            android:text="Payee Name        "
             android:textSize="16sp"
             android:textStyle="bold" />
 
         <EditText
             android:padding="12dp"
             android:id="@+id/editText2"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textview2"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true" />
+            </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:layout_below="@+id/editText2"
             android:padding="12dp"
-            android:text="From"
+            android:text="From              "
             android:textSize="16sp"
             android:textStyle="bold" />
 
         <EditText
             android:padding="12dp"
             android:id="@+id/editText3"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textView3"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true" />
+            </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:layout_below="@+id/editText3"
             android:padding="12dp"
-            android:text="Transaction Type"
+            android:text="Transaction Type  "
             android:textSize="16sp"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/editText4"
             android:padding="12dp"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textView4"
             android:layout_alignParentRight="true"
             />
+            </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
         <TextView
             android:id="@+id/textView5"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:layout_below="@+id/editText4"
             android:padding="12dp"
             android:textStyle="bold"
-            android:text="Amount"
+            android:text="Amount            "
             android:textSize="16sp"
             />
         <EditText
             android:id="@+id/editText5"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignBaseline="@+id/textView5"
             android:padding="12dp"
             />
+            </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:layout_below="@+id/editText5"
             android:padding="12dp"
@@ -112,68 +156,90 @@
             android:id="@+id/textView6"
             />
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textView6"
             android:layout_alignParentRight="true"
             android:padding="12dp"
             android:id="@+id/editText6"
             />
+            </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
         <TextView
             android:id="@+id/textview7"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:layout_below="@+id/editText6"
             android:padding="12dp"
             android:textStyle="bold"
             android:textSize="16sp"
-            android:text="Transaction Id"
+            android:text="Transaction Id    "
             />
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textview7"
             android:layout_alignParentRight="true"
             android:padding="12dp"
             android:id="@+id/editText7"
             />
+            </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:layout_below="@+id/editText7"
-            android:text="Response Time"
+            android:text="Response Time     "
             android:textSize="16sp"
             android:textStyle="bold"
             android:padding="12dp"
             android:id="@+id/textview8"
             />
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textview8"
             android:layout_alignParentRight="true"
             android:padding="12dp"
             android:id="@+id/editText8"
             />
+            </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:layout_below="@+id/editText8"
             android:padding="12dp"
             android:textStyle="bold"
             android:textSize="16sp"
-            android:text="Customer Ref.No"
+            android:text="Customer Ref.No   "
             android:id="@+id/textview9"
             />
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:id="@+id/editText9"
             android:layout_alignBaseline="@+id/textview9"
             android:layout_alignParentRight="true"
             android:padding="12dp"/>
 
-    </RelativeLayout>
+    </LinearLayout>
     <LinearLayout
         android:weightSum="3"
         android:orientation="horizontal"
@@ -196,6 +262,7 @@
             android:layout_weight="1"
             />
         <Button
+            android:id="@+id/send"
             android:text="send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -233,4 +300,5 @@
 
 
 
+</LinearLayout>
 </LinearLayout>
